# stoppable_thread

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: stoppable.h  stoppable_concrete.h
src/: main.cpp
